@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/netbeans-mobility
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/netbeans-mobility/ChangeLog,v 1.14 2012/05/30 05:53:46 johu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/netbeans-mobility/ChangeLog,v 1.15 2012/07/25 16:08:46 fordfrog Exp $
+
+*netbeans-mobility-7.2 (25 Jul 2012)
+
+  25 Jul 2012; Miroslav Šulc <fordfrog@gentoo.org>
+  +netbeans-mobility-7.2.ebuild:
+  netbeans 7.2 release
 
   30 May 2012; Johannes Huber <johu@gentoo.org> netbeans-mobility-7.1.2.ebuild:
   Stable for x86, wrt bug #417799
